--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.main-container {
+  @apply flex justify-center items-center min-h-screen;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.counter-container {
+  @apply flex flex-col justify-center items-center gap-3 border rounded-md p-10 text-neutral-100 bg-orange-600;
+}
+.header {
+  @apply flex items-center gap-2;
+}
+.buttons {
+  @apply border py-2 px-4 border-neutral-100 hover:bg-orange-500 duration-300 ease-in-out;
 }
